# EntWars

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  imgui.ini  vcpkg-configuration.json  vcpkg.json
data/levels/: default.json
data/tilemaps/: default.tmap
src/: main.cpp  pch.h
src/Core/: Input.cpp  Input.h  TaskThreads.cpp  TaskThreads.h  TheWindow.h  Time.cpp  Time.h  VectorMath.hpp  fileutils.hpp
src/Editor/: Editor.cpp  Editor.h  LevelEditor.cpp  LevelEditor.h
src/GameLogic/: EntCommon.cpp  EntCommon.h  Level.cpp  Level.h  PathWorker.cpp  PathWorker.h  TileMap.cpp  TileMap.h
src/GameLogic/Systems/: Units.h
src/Graphics/: Camera.cpp  Camera.h
